# Animal_classification

./: .gitignore  README.md  dataset.py  model.py  pyproject.toml  test_cnn.py  train_cnn.py
